# RealSense-D455-YOLOv11-Person

./: .gitignore  README.md  main.py  person_env.yml  requirements.txt  ros2_main.py  tutorials.md
src/person_detector/: package.xml  setup.cfg  setup.py
src/person_detector/person_detector/: ros2_main.c  ros2_main.py
src/person_detector/person_detector/model/: yolo_detector.py
src/person_detector/person_detector/utils/: kalman_3d.c  motion_tracker.c  motion_tracker.py  photo_judge.c  photo_judge.py  posture_classification.c  posture_classification.py  remove_bg.c  remove_bg.py  robust_3d_estimation.c
src/person_detector_msgs/: CMakeLists.txt  package.xml
src/person_detector_msgs/msg/: PersonDetection.msg
utils/: kalman_3d.py  motion_tracker.py  robust_3d_estimation.py
